--- a/7-things-everyone-should-know-about-cannabis.html
+++ b/7-things-everyone-should-know-about-cannabis.html
@@ -6,7 +6,7 @@
   <title>7 Things Everyone Should Know About Cannabis — Times of Hemp</title>
   <meta name="description" content="Seven essential things to know about cannabis: species, cannabinoids, medicinal uses, legal landscape, non-intoxicating products, hemp sustainability, safety tips and myths." />
   <meta name="author" content="Times of Hemp" />
-  <link rel="canonical" href="https://timesofhemp.com/7-things-everyone-should-know-about-cannabis" />
+  <link rel="canonical" href="https://tohindia.github.io/timesofhemp/7-things-everyone-should-know-about-cannabis.html" />
   <style>
     body{font-family: Inter,system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial;line-height:1.7;color:#0f1724;padding:28px;background:linear-gradient(180deg,#f6fbf6 0%, #ffffff 100%);}
     .container{max-width:900px;margin:0 auto;background:#fff;padding:28px;border-radius:12px;box-shadow:0 6px 30px rgba(15,23,42,0.06);}
@@ -71,8 +71,6 @@
   <li><strong>CBD (Cannabidiol):</strong> Non-psychoactive and well-known for its ability to lessen pain, inflammation, and anxiety.</li>
 </ul>
 <p>But did you know that cannabis contains more than 100 different types of cannabinoids? Due to their special advantages, substances like <strong>CBG</strong> (cannabigerol) and <strong>CBN</strong> (cannabinol) are becoming more and more popular. The endocannabinoid system (ECS) in your body is influenced by these cannabinoids to preserve homeostasis, or balance, in processes including mood, appetite, and sleep.</p>
-
-<p><a href="https://timesofhemp.com">Read More: 5 Most Creative Places to Grow Cannabis</a></p>
 
 <h3>Cannabis has Medicinal Potential</h3>
 <p>Cannabis isn’t just for recreation; its medicinal benefits are backed by science. People use it to manage conditions such as:</p>
