--- a/7-things-everyone-should-know-about-cannabis.html
+++ b/7-things-everyone-should-know-about-cannabis.html
@@ -132,7 +132,7 @@
     </article>
 
     <footer>
-      <div>© 2025 Times of Hemp — <a href="https://timesofhemp.com" target="_blank" rel="noopener">timesofhemp.com</a></div>
+      <div>© 2025 Times of Hemp — <a href="https://tohindia.github.io/timesofhemp/" target="_blank" rel="noopener">timesofhemp</a></div>
     </footer>
   </div>
 </body>
