--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <p>Covering everything from industrial hemp applications to policy updates, Times of Hemp serves as the go-to source for businesses, researchers, and enthusiasts passionate about the future of hemp. With a commitment to education and advocacy, the platform amplifies the potential of hemp as a game-changer for industries like construction and textiles.</p>
 
     <footer>
-      <div>Visit the site: <a href="https://timesofhemp.com" target="_blank" rel="noopener">timesofhemp.com</a></div>
+      <div>Copyright 2025 - <a href="https://tohindia.github.io/timesofhemp/" target="_blank" rel="noopener">Times Of Hemp</a></div>
     </footer>
   </main>
 </body>
