--- a/index.html
+++ b/index.html
@@ -30,7 +30,11 @@
     <p class="lead">Times of Hemp is a leading digital media platform dedicated to the global hemp industry. It provides in-depth news, research, and insights on hemp-based innovations, sustainability, and market trends.</p>
 
     <p>Covering everything from industrial hemp applications to policy updates, Times of Hemp serves as the go-to source for businesses, researchers, and enthusiasts passionate about the future of hemp. With a commitment to education and advocacy, the platform amplifies the potential of hemp as a game-changer for industries like construction and textiles.</p>
-
+<h3 style="text-align: center;">Blogs</h3>
+<ol>
+<li><a href="https://tohindia.github.io/timesofhemp/7-things-everyone-should-know-about-cannabis.html">7 Things Everyone Should Know About Cannabis</a></li>
+<li><a href="https://tohindia.github.io/timesofhemp/role-and-benefits-of-cannabis-in-regenerative-agriculture.html">Role and Benefits of Cannabis in Regenerative Agriculture</a></li>
+</ol>
     <footer>
       <div>Copyright 2025 - <a href="https://tohindia.github.io/timesofhemp/" target="_blank" rel="noopener">Times Of Hemp</a></div>
     </footer>
