--- a/role-and-benefits-of-cannabis-in-regenerative-agriculture.html
+++ b/role-and-benefits-of-cannabis-in-regenerative-agriculture.html
@@ -100,7 +100,7 @@
     <footer>
         <p><strong>About Times of Hemp</strong></p>
         <p>Times of Hemp is a leading digital media platform dedicated to the global hemp industry. It provides in-depth news, research, and insights on hemp-based innovations, sustainability, and market trends.</p>
-        <p>&copy; 2025 Times of Hemp. All rights reserved.</p>
+        <p>&copy; 2025 <a href="https://tohindia.github.io/timesofhemp/">Times of Hemp</a>. All rights reserved.</p>
     </footer>
 </body>
 </html>
