--- a/index.html
+++ b/index.html
@@ -1,22 +1,31 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Times of Hemp — Short Bio</title>
-  <meta name="description" content="Times of Hemp is a leading digital media platform dedicated to the global hemp industry.">
-  <style>
-    body{font-family:system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial;line-height:1.6;margin:0;background:#f7fbf7;color:#0b2b1e}
-    .container{max-width:900px;margin:48px auto;padding:32px;background:#fff;border-radius:12px;box-shadow:0 6px 30px rgba(11,43,30,0.06)}
-    header{display:flex;align-items:center;gap:16px}
-    .logo{width:64px;height:64px;border-radius:10px;background:linear-gradient(135deg,#2f8a5a,#7ed29b);display:flex;align-items:center;justify-content:center;color:white;font-weight:700}
-    h1{margin:0;font-size:1.5rem}
-    p.lead{margin-top:16px;font-size:1.05rem}
-    .meta{margin-top:20px;font-size:0.95rem;color:#3b6b56}
-    footer{margin-top:28px;font-size:0.85rem;color:#6b6b6b}
-    a {color:inherit}
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Explore how cannabis contributes to regenerative agriculture by restoring soil health, enhancing biodiversity, and promoting sustainability.">
+    <title>Welcome to Times of Hemp | Times of Hemp</title>
+    <style>
+        body { font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; background: #f7f7f7; color: #222; line-height: 1.6; margin: 0; padding: 0; }
+        header { background: #1b4332; color: #fff; text-align: center; padding: 40px 20px; }
+        header h1 { font-size: 2.5em; margin-bottom: 10px; }
+        header p { font-size: 1.1em; }
+        main { max-width: 850px; margin: 40px auto; background: #fff; padding: 40px; border-radius: 12px; box-shadow: 0 4px 12px rgba(0,0,0,0.1); }
+        h2 { color: #1b4332; margin-top: 30px; }
+        h3 { color: #2a9d8f; margin-top: 20px; }
+        ul { padding-left: 25px; }
+        a { color: #2a9d8f; text-decoration: none; }
+        a:hover { text-decoration: underline; }
+        footer { text-align: center; padding: 20px; background: #1b4332; color: white; margin-top: 40px; }
+        footer p { margin: 8px 0; }
+        hr { margin: 30px 0; border: 0; border-top: 1px solid #ddd; }
+    </style>
 </head>
+<body>
+    <header>
+        <h1>Welcome to Times of India</h1>
+        <p><strong>Published on:</strong> October 8, 2025 | <strong>By Times of Hemp</strong></p>
+    </header>
 <body>
   <main class="container">
     <header>
@@ -35,9 +44,10 @@
 <li><a href="https://tohindia.github.io/timesofhemp/7-things-everyone-should-know-about-cannabis.html">7 Things Everyone Should Know About Cannabis</a></li>
 <li><a href="https://tohindia.github.io/timesofhemp/role-and-benefits-of-cannabis-in-regenerative-agriculture.html">Role and Benefits of Cannabis in Regenerative Agriculture</a></li>
 </ol>
-    <footer>
-      <div>Copyright 2025 - <a href="https://tohindia.github.io/timesofhemp/" target="_blank" rel="noopener">Times Of Hemp</a></div>
+   <footer>
+        <p><strong>About Times of Hemp</strong></p>
+        <p>Times of Hemp is a leading digital media platform dedicated to the global hemp industry. It provides in-depth news, research, and insights on hemp-based innovations, sustainability, and market trends.</p>
+        <p>&copy; 2025 <a href="https://tohindia.github.io/timesofhemp/">Times of Hemp</a>. All rights reserved.</p>
     </footer>
-  </main>
 </body>
 </html>
