--- a/role-and-benefits-of-cannabis-in-regenerative-agriculture.html
+++ b/role-and-benefits-of-cannabis-in-regenerative-agriculture.html
@@ -23,8 +23,7 @@
 </head>
 <body>
     <header>
-        <h1>Role and Benefits of Cannabis in Regenerative Agriculture</h1>
-        <p><strong>Published on:</strong> October 8, 2025 | <strong>By Times of Hemp</strong></p>
+        <h1>Welcome to Times of Hemp</h1>
     </header>
 
     <main>
