--- a/7-things-everyone-should-know-about-cannabis.html
+++ b/7-things-everyone-should-know-about-cannabis.html
@@ -7,46 +7,25 @@
   <meta name="description" content="Seven essential things to know about cannabis: species, cannabinoids, medicinal uses, legal landscape, non-intoxicating products, hemp sustainability, safety tips and myths." />
   <meta name="author" content="Times of Hemp" />
   <link rel="canonical" href="https://tohindia.github.io/timesofhemp/7-things-everyone-should-know-about-cannabis.html" />
-  <style>
-    body{font-family: Inter,system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial;line-height:1.7;color:#0f1724;padding:28px;background:linear-gradient(180deg,#f6fbf6 0%, #ffffff 100%);}
-    .container{max-width:900px;margin:0 auto;background:#fff;padding:28px;border-radius:12px;box-shadow:0 6px 30px rgba(15,23,42,0.06);}
-    header{display:flex;gap:16px;align-items:center}
-    .logo{width:62px;height:62px;border-radius:10px;background:#2b9348;color:#fff;display:flex;align-items:center;justify-content:center;font-weight:700;}
-    h1{margin:0;font-size:26px}
-    .meta{color:#6b7280;font-size:14px;margin-top:6px}
-    img.hero{width:100%;height:340px;object-fit:cover;border-radius:10px;margin-top:18px}
-    .tags{margin-top:12px}
-    .tag{display:inline-block;background:#eef6ea;color:#2b9348;padding:6px 10px;border-radius:999px;margin-right:8px;font-size:13px}
-    article{margin-top:18px}
-    h2{color:#2b9348}
-    blockquote{border-left:4px solid #e6f4ea;padding-left:12px;color:#065f46;background:#fbfff9;border-radius:6px}
-    footer{margin-top:28px;border-top:1px dashed #eef2f1;padding-top:12px;color:#6b7280;display:flex;justify-content:space-between;align-items:center}
-    a.read-more{color:#065f46;text-decoration:none;font-weight:600}
-    @media (max-width:640px){img.hero{height:200px}}
-  </style>
-  <script type="application/ld+json">
-  {
-    "@context": "https://schema.org",
-    "@type": "Article",
-    "headline": "7 Things Everyone Should Know About Cannabis",
-    "description": "Seven essential things to know about cannabis: species, cannabinoids, medicinal uses, legal landscape, non-intoxicating products, hemp sustainability, safety tips and myths.",
-    "author": {"@type":"Organization","name":"Times of Hemp"},
-    "publisher": {"@type":"Organization","name":"Times of Hemp"},
-    "datePublished": "2025-10-08"
-  }
-  </script>
+    <style>
+        body { font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; background: #f7f7f7; color: #222; line-height: 1.6; margin: 0; padding: 0; }
+        header { background: #1b4332; color: #fff; text-align: center; padding: 40px 20px; }
+        header h1 { font-size: 2.5em; margin-bottom: 10px; }
+        header p { font-size: 1.1em; }
+        main { max-width: 850px; margin: 40px auto; background: #fff; padding: 40px; border-radius: 12px; box-shadow: 0 4px 12px rgba(0,0,0,0.1); }
+        h2 { color: #1b4332; margin-top: 30px; }
+        h3 { color: #2a9d8f; margin-top: 20px; }
+        ul { padding-left: 25px; }
+        a { color: #2a9d8f; text-decoration: none; }
+        a:hover { text-decoration: underline; }
+        footer { text-align: center; padding: 20px; background: #1b4332; color: white; margin-top: 40px; }
+        footer p { margin: 8px 0; }
+        hr { margin: 30px 0; border: 0; border-top: 1px solid #ddd; }
+    </style>
 </head>
 <body>
-  <div class="container">
     <header>
-      <div class="logo">TH</div>
-      <div>
-        <h1>7 Things Everyone Should Know About Cannabis</h1>
-        <div class="meta">By <strong>Times of Hemp</strong> • <span>6 min read</span> • October 8, 2025</div>
-        <div class="tags">
-          <span class="tag">Cannabis</span><span class="tag">Hemp</span><span class="tag">CBD</span><span class="tag">Sustainability</span>
-        </div>
-      </div>
+        <h1>Welcome to Times of Hemp</h1>
     </header>
 
     <img class="hero" src="https://images.unsplash.com/photo-1519681393784-d120267933ba?q=80&w=1400&auto=format&fit=crop&ixlib=rb-4.0.3&s=placeholder" alt="Cannabis leaves">
