--- a/7-things-everyone-should-know-about-cannabis.html
+++ b/7-things-everyone-should-know-about-cannabis.html
@@ -28,8 +28,6 @@
         <h1>Welcome to Times of Hemp</h1>
     </header>
 
-    <img class="hero" src="https://images.unsplash.com/photo-1519681393784-d120267933ba?q=80&w=1400&auto=format&fit=crop&ixlib=rb-4.0.3&s=placeholder" alt="Cannabis leaves">
-
     <article>
       <h2>7 Things Everyone Should Know About Cannabis</h2>
 
@@ -111,7 +109,9 @@
     </article>
 
     <footer>
-      <div>© 2025 Times of Hemp — <a href="https://tohindia.github.io/timesofhemp/" target="_blank" rel="noopener">timesofhemp</a></div>
+        <p><strong>About Times of Hemp</strong></p>
+        <p>Times of Hemp is a leading digital media platform dedicated to the global hemp industry. It provides in-depth news, research, and insights on hemp-based innovations, sustainability, and market trends.</p>
+        <p>&copy; 2025 <a href="https://tohindia.github.io/timesofhemp/">Times of Hemp</a>. All rights reserved.</p>
     </footer>
   </div>
 </body>
