--- a/7-things-everyone-should-know-about-cannabis.html
+++ b/7-things-everyone-should-know-about-cannabis.html
@@ -28,7 +28,7 @@
         <h1>Welcome to Times of Hemp</h1>
     </header>
 
-    <article>
+    <main>
       <h2>7 Things Everyone Should Know About Cannabis</h2>
 
 <p>Cannabis is one of the most talked-about plants today, inspiring everything from passionate advocacy to curious exploration. It’s been around for centuries, yet myths and misconceptions still cloud its reputation. Whether you’re a seasoned enthusiast, a wellness seeker, or just curious, understanding cannabis can help you make informed choices. Let’s dive into seven things everyone should know about cannabis in a simple, conversational style with Times of Hemp.</p>
@@ -106,7 +106,7 @@
 <p>Accept the green revolution, but keep in mind that information is power. Keep yourself informed, maintain your curiosity, and responsibly enjoy the trip!</p>
 
 
-    </article>
+    </main>
 
     <footer>
         <p><strong>About Times of Hemp</strong></p>
