--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Explore how cannabis contributes to regenerative agriculture by restoring soil health, enhancing biodiversity, and promoting sustainability.">
-    <title>Welcome to Times of Hemp | Times of Hemp</title>
+    <title>Role and Benefits of Cannabis in Regenerative Agriculture | Times of Hemp</title>
     <style>
         body { font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; background: #f7f7f7; color: #222; line-height: 1.6; margin: 0; padding: 0; }
         header { background: #1b4332; color: #fff; text-align: center; padding: 40px 20px; }
@@ -22,18 +22,12 @@
     </style>
 </head>
 <body>
-   
-<body>
-  <main class="container">
     <header>
-      <div class="logo">ToH</div>
-      <div>
-        <h1>Times of Hemp</h1>
-        <div class="meta">Digital media for hemp innovation & sustainability</div>
-      </div>
+        <h1>Welcome to Times of Hemp</h1>
     </header>
 
-    <p class="lead">Times of Hemp is a leading digital media platform dedicated to the global hemp industry. It provides in-depth news, research, and insights on hemp-based innovations, sustainability, and market trends.</p>
+    <main>
+        <p class="lead">Times of Hemp is a leading digital media platform dedicated to the global hemp industry. It provides in-depth news, research, and insights on hemp-based innovations, sustainability, and market trends.</p>
 
     <p>Covering everything from industrial hemp applications to policy updates, Times of Hemp serves as the go-to source for businesses, researchers, and enthusiasts passionate about the future of hemp. With a commitment to education and advocacy, the platform amplifies the potential of hemp as a game-changer for industries like construction and textiles.</p>
 <h3 style="text-align: center;">Blogs</h3>
@@ -42,6 +36,11 @@
 <li><a href="https://tohindia.github.io/timesofhemp/role-and-benefits-of-cannabis-in-regenerative-agriculture.html">Role and Benefits of Cannabis in Regenerative Agriculture</a></li>
 </ol>
    <footer>
+        <p><strong>About Times of Hemp</strong></p>
+        <p>Times of Hemp is a leading digital media platform dedicated to the global hemp industry. It provides in-depth news, research, and insights on hemp-based innovations, sustainability, and market trends.</p>
+        <p>&copy; 2025 <a href="https://tohindia.github.io/timesofhemp/">Times of Hemp</a>. All rights reserved.</p> </main>
+
+    <footer>
         <p><strong>About Times of Hemp</strong></p>
         <p>Times of Hemp is a leading digital media platform dedicated to the global hemp industry. It provides in-depth news, research, and insights on hemp-based innovations, sustainability, and market trends.</p>
         <p>&copy; 2025 <a href="https://tohindia.github.io/timesofhemp/">Times of Hemp</a>. All rights reserved.</p>
