--- a/can-cbd-replace-traditional-medications.html
+++ b/can-cbd-replace-traditional-medications.html
@@ -11,17 +11,28 @@
   <meta property="og:image" content="https://via.placeholder.com/1200x630.png?text=Can+CBD+Replace+Traditional+Medications">
   <meta property="og:type" content="article">
   <meta property="og:site_name" content="Times of Hemp">
-  <style>
-    body {font-family: Arial, sans-serif; background-color: #f8fff8; color: #1b1b1b; line-height: 1.7; margin: 0; padding: 20px;}
-    .container {max-width: 900px; margin: 0 auto; background: #fff; padding: 30px; border-radius: 12px; box-shadow: 0 4px 20px rgba(0,0,0,0.08);}
-    h1, h2, h3 {color: #2b9348;}
-    h1 {font-size: 2.2em; margin-bottom: 10px;}
-    p {margin-bottom: 16px;}
-    ul {margin-left: 20px;}
-    footer {border-top: 1px solid #e5e9e6; margin-top: 40px; padding-top: 20px; font-size: 14px; color: #555;}
-  </style>
+<style>
+        body { font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; background: #f7f7f7; color: #222; line-height: 1.6; margin: 0; padding: 0; }
+        header { background: #1b4332; color: #fff; text-align: center; padding: 40px 20px; }
+        header h1 { font-size: 2.5em; margin-bottom: 10px; }
+        header p { font-size: 1.1em; }
+        main { max-width: 850px; margin: 40px auto; background: #fff; padding: 40px; border-radius: 12px; box-shadow: 0 4px 12px rgba(0,0,0,0.1); }
+        h2 { color: #1b4332; margin-top: 30px; }
+        h3 { color: #2a9d8f; margin-top: 20px; }
+        ul { padding-left: 25px; }
+        a { color: #2a9d8f; text-decoration: none; }
+        a:hover { text-decoration: underline; }
+        footer { text-align: center; padding: 20px; background: #1b4332; color: white; margin-top: 40px; }
+        footer p { margin: 8px 0; }
+        hr { margin: 30px 0; border: 0; border-top: 1px solid #ddd; }
+    </style>
 </head>
 <body>
+    <header>
+        <h1>Welcome to Times of Hemp</h1>
+    </header>
+
+    <main>
   <div class="container">
     <h1>Can CBD Replace Traditional Medications?</h1>
     <p>Nowadays, cannabidiol (CBD), a non-psychoactive compound derived from the cannabis plant, has garnered immense attention for its potential health benefits. Promoted as a natural remedy for a range of ailments—from chronic pain to anxiety—CBD has become a beacon of hope for many seeking alternatives to traditional medications. But can CBD truly replace conventional pharmaceuticals? Today, Times of Hemp will let you delve into the science, benefits, and limitations to answer this compelling question.</p>
@@ -87,10 +98,12 @@
     <h3>Disclaimer:</h3>
     <p>This article is for informational purposes only and should not be considered medical advice. Always consult a healthcare professional before starting any new treatment.</p>
 
+   </main>
+
     <footer>
-      <h3>About Times of Hemp</h3>
-      <p>Times of Hemp is a leading digital media platform dedicated to the global hemp industry. It provides in-depth news, research, and insights on hemp-based innovations, sustainability, and market trends. Covering everything from industrial hemp applications to policy updates, Times of Hemp serves as the go-to source for businesses, researchers, and enthusiasts passionate about the future of hemp. With a commitment to education and advocacy, the platform amplifies the potential of hemp as a game-changer for industries like construction, textiles, health, and clean energy.</p>
+        <p><strong>About Times of Hemp</strong></p>
+        <p>Times of Hemp is a leading digital media platform dedicated to the global hemp industry. It provides in-depth news, research, and insights on hemp-based innovations, sustainability, and market trends.</p>
+        <p>&copy; 2025 <a href="https://tohindia.github.io/timesofhemp/">Times of Hemp</a>. All rights reserved.</p>
     </footer>
-  </div>
 </body>
 </html>
