--- a/the-future-of-sustainable-and-eco-friendly-construction.html
+++ b/the-future-of-sustainable-and-eco-friendly-construction.html
@@ -88,12 +88,12 @@
 <li>India &ndash; Growing demand for eco-friendly alternatives in the construction industry.</li>
 </ol>
 <h2><strong>The Future of Hempcrete in Green Construction</strong></h2>
-<p>Hempcrete stands to become fundamental for&nbsp;<a href="https://writeupcafe.com/the-rise-of-sustainable-construction-" target="_blank" rel="nofollow noopener">future construction</a>&nbsp;development since environmental consciousness about sustainable development grows. Access to pre-fabricated hempcrete panels combined with enhanced regulatory backing will make sustainable hempcrete construction easier to obtain.</p>
+<p>Hempcrete stands to become fundamental for future construction &nbsp;development since environmental consciousness about sustainable development grows. Access to pre-fabricated hempcrete panels combined with enhanced regulatory backing will make sustainable hempcrete construction easier to obtain.</p>
 <p>The worldwide hempcrete market will expand rapidly in future years thus transforming traditional building methods for residential and office structures.</p>
 <h2><strong>Conclusion: Time to Build a Greener Future!</strong></h2>
 <p>This is the time to construct an environment-friendly future together.</p>
 <p>Hempcrete is not just a trend but a change, it represents disruptive changes in eco-friendly construction. The eco-conscious builder needs to use hempcrete because it helps decrease carbon pollution while maintaining clean climate conditions and contributing to better home wellness.</p>
-<p>So, are you ready to join the green revolution? Keep up with the latest in hemp innovation, sustainability, and eco-friendly living with&nbsp;<a href="https://timesofhemp.com/" target="_blank" rel="nofollow noopener">Times of Hemp</a>!&nbsp;</p>
+<p>So, are you ready to join the green revolution? Keep up with the latest in hemp innovation, sustainability, and eco-friendly living with Times of Hemp</p>
 
         </main>
 
