--- a/the-future-of-sustainable-and-eco-friendly-construction.html
+++ b/the-future-of-sustainable-and-eco-friendly-construction.html
@@ -29,7 +29,7 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to Times of Hemp</h1>
+        <h1>The Future of Sustainable and Eco-Friendly Construction</h1>
     </header>
 
     <main>
