--- a/role-and-benefits-of-cannabis-in-regenerative-agriculture.html
+++ b/role-and-benefits-of-cannabis-in-regenerative-agriculture.html
@@ -23,7 +23,7 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to Times of Hemp</h1>
+        <h1>Role and Benefits of Cannabis in Regenerative Agriculture</h1>
     </header>
 
     <main>
