--- a/hemp-seeds-and-heart-health.html
+++ b/hemp-seeds-and-heart-health.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>The Science Behind Hempcrete: Why It’s the Future of Green Construction — Times of Hemp</title>
+  <title>Hemp Seeds and Heart Health: How They Can Benefit You — Times of Hemp</title>
   <meta name="description" content="Explore whether CBD can replace traditional medications, its benefits, science, and limitations in modern medicine. A Times of Hemp article.">
   <meta name="author" content="Times of Hemp">
-  <meta property="og:title" content="The Science Behind Hempcrete: Why It’s the Future of Green Construction — Times of Hemp">
+  <meta property="og:title" content="Hemp Seeds and Heart Health: How They Can Benefit You — Times of Hemp">
   <meta property="og:description" content="Explore the potential of CBD as an alternative to traditional pharmaceuticals with Times of Hemp.">
   <meta property="og:image" content="https://via.placeholder.com/1200x630.png?text=Can+CBD+Replace+Traditional+Medications">
   <meta property="og:type" content="article">
@@ -29,7 +29,7 @@
 </head>
 <body>
     <header>
-        <h1>The Science Behind Hempcrete</h1>
+        <h1>Hemp Seeds and Heart Health: How They Can Benefit You</h1>
     </header>
 
     <main>
