--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Explore how cannabis contributes to regenerative agriculture by restoring soil health, enhancing biodiversity, and promoting sustainability.">
-    <title>Role and Benefits of Cannabis in Regenerative Agriculture | Times of Hemp</title>
+    <title>Home | Times of Hemp</title>
     <style>
         body { font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; background: #f7f7f7; color: #222; line-height: 1.6; margin: 0; padding: 0; }
         header { background: #1b4332; color: #fff; text-align: center; padding: 40px 20px; }
