--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
 <li><a href="https://tohindia.github.io/timesofhemp/hemp-protein-vs-whey-proteins.html">Hemp Protein vs. Whey Proteins: Which One is Best?</a></li>
  <li><a href="https://tohindia.github.io/timesofhemp/the-science-behind-hempcrete.html">The Science Behind Hempcrete: Why It’s the Future of Green Construction</a></li>
  <li><a href="https://tohindia.github.io/timesofhemp/hemp-seeds-and-heart-health.html">Hemp Seeds and Heart Health: How They Can Benefit You</a></li>
+ <li><a href="https://tohindia.github.io/timesofhemp/how-cbd-oil-is-transforming-skincare.html">How CBD Oil is Transforming Skincare
+</a></li>
 </ol>
   </main>
 
