--- a/hemp-seeds-and-heart-health.html
+++ b/hemp-seeds-and-heart-health.html
@@ -173,7 +173,15 @@
 <p>Pick up a bag of hemp seeds the next time you&rsquo;re at the supermarket. Your heart will appreciate it! Begin by incorporating them into your favourite recipes and incorporating them into your daily schedule.</p>
 <p>Keep in mind that caring for your heart doesn&rsquo;t need significant lifestyle adjustments. Small, regular routines, like adding hemp seeds to your salad, can sometimes have the most impact.</p>
 <p>Cheers to a heart that is healthy and joyful!</p>
-
+<h4 style="text-align: left;">Also read:</h4>
+<ol>
+<li><a href="https://tohindia.github.io/timesofhemp/7-things-everyone-should-know-about-cannabis.html">7 Things Everyone Should Know About Cannabis</a></li>
+<li><a href="https://tohindia.github.io/timesofhemp/role-and-benefits-of-cannabis-in-regenerative-agriculture.html">Role and Benefits of Cannabis in Regenerative Agriculture</a></li>
+<li><a href="https://tohindia.github.io/timesofhemp/can-cbd-replace-traditional-medications.html">Can CBD Replace Traditional Medications?</a></li>
+<li><a href="https://tohindia.github.io/timesofhemp/the-future-of-sustainable-and-eco-friendly-construction.html">The Future of Sustainable and Eco-Friendly Construction</a></li>
+<li><a href="https://tohindia.github.io/timesofhemp/the-science-behind-hempcrete.html">The Science Behind Hempcrete: Why It&rsquo;s the Future of Green Construction</a></li>
+<li><a href="https://tohindia.github.io/timesofhemp/how-cbd-oil-is-transforming-skincare.html">How CBD Oil is Transforming Skincare </a></li>
+</ol>
         </main>
 
     <footer>
