--- a/how-cbd-oil-is-transforming-skincare.html
+++ b/how-cbd-oil-is-transforming-skincare.html
@@ -84,7 +84,16 @@
 <p>CBD oil is worth a try if you&rsquo;re searching for a natural, multipurpose, and beneficial skincare ingredient. This super ingredient has something to offer whether you&rsquo;re trying to treat acne, calm sensitive skin, or just wish to look a little more radiant.</p>
 <p>As with any new skincare product, start slowly and observe how your skin responds. For the best outcomes, remember to select high-quality, third-party-tested items.</p>
 <p>What&rsquo;re you waiting for, then? It&rsquo;s time to give your beauty regimen the makeover it needs as the CBD skincare revolution arrives!</p>
-
+<h4 style="text-align: left;">Also read:</h4>
+<ol>
+<li><a href="https://tohindia.github.io/timesofhemp/7-things-everyone-should-know-about-cannabis.html">7 Things Everyone Should Know About Cannabis</a></li>
+<li><a href="https://tohindia.github.io/timesofhemp/role-and-benefits-of-cannabis-in-regenerative-agriculture.html">Role and Benefits of Cannabis in Regenerative Agriculture</a></li>
+<li><a href="https://tohindia.github.io/timesofhemp/can-cbd-replace-traditional-medications.html">Can CBD Replace Traditional Medications?</a></li>
+<li><a href="https://tohindia.github.io/timesofhemp/the-future-of-sustainable-and-eco-friendly-construction.html">The Future of Sustainable and Eco-Friendly Construction</a></li>
+<li><a href="https://tohindia.github.io/timesofhemp/hemp-protein-vs-whey-proteins.html">Hemp Protein vs. Whey Proteins: Which One is Best?</a></li>
+<li><a href="https://tohindia.github.io/timesofhemp/the-science-behind-hempcrete.html">The Science Behind Hempcrete: Why It&rsquo;s the Future of Green Construction</a></li>
+<li><a href="https://tohindia.github.io/timesofhemp/hemp-seeds-and-heart-health.html">Hemp Seeds and Heart Health: How They Can Benefit You</a></li>
+</ol>
         </main>
 
     <footer>
