--- a/role-and-benefits-of-cannabis-in-regenerative-agriculture.html
+++ b/role-and-benefits-of-cannabis-in-regenerative-agriculture.html
@@ -94,6 +94,16 @@
         <hr>
         <h3>Disclaimer</h3>
         <p>This article is for informational purposes only and should not be considered medical or agricultural advice. Always consult experts before implementing new farming practices.</p>
+   <h4 style="text-align: left;">Also read:</h4>
+<ol>
+<li><a href="https://tohindia.github.io/timesofhemp/7-things-everyone-should-know-about-cannabis.html">7 Things Everyone Should Know About Cannabis</a></li>
+<li><a href="https://tohindia.github.io/timesofhemp/can-cbd-replace-traditional-medications.html">Can CBD Replace Traditional Medications?</a></li>
+<li><a href="https://tohindia.github.io/timesofhemp/the-future-of-sustainable-and-eco-friendly-construction.html">The Future of Sustainable and Eco-Friendly Construction</a></li>
+<li><a href="https://tohindia.github.io/timesofhemp/hemp-protein-vs-whey-proteins.html">Hemp Protein vs. Whey Proteins: Which One is Best?</a></li>
+<li><a href="https://tohindia.github.io/timesofhemp/the-science-behind-hempcrete.html">The Science Behind Hempcrete: Why It&rsquo;s the Future of Green Construction</a></li>
+<li><a href="https://tohindia.github.io/timesofhemp/hemp-seeds-and-heart-health.html">Hemp Seeds and Heart Health: How They Can Benefit You</a></li>
+<li><a href="https://tohindia.github.io/timesofhemp/how-cbd-oil-is-transforming-skincare.html">How CBD Oil is Transforming Skincare </a></li>
+</ol>
     </main>
 
     <footer>
